--- a/mainsite.html
+++ b/mainsite.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>XXX pank</title>
+    <title>??? pank</title>
 </head>
 <body>
     <nav>
         <div class="navbar">
             <ul>
-                <li><a href="mingi url mis viib home">Home</a></li>
-                <li><a href="mingi url mis viib finances">Finances</a></li>
-                <li><a href="mingi url mis viib job offerings">Job offerings</a></li>
-                <li><a href="mingi url mis viib about">About</a></li>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#finances">Finances</a></li>
+                <li><a href="#job offerings">Job offerings</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
         </div>
     </nav>
