--- a/mainsite.html
+++ b/mainsite.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
     <title>??? pank</title>
-=======
     <link rel="stylesheet" href="CSS\mainsite.css">
-    <title>XXX pank</title>
->>>>>>> b3225580a60968a8133ed9dba3cc980124c1e541
 </head>
 <body>
     <nav>
@@ -22,5 +18,18 @@
             </ul>
         </div>
     </nav>
+    <div class="big">
+        <div class="image">
+            <img src="coins.jpg" alt="pilt">
+        </div>
+        <div class="container">
+            <ul>
+                <li style="background-color: #EF7110;"><a href="#" class="button" >Äripakett</a></li>
+                <li style="background-color: #25EB45;"><a href="#" class="button" >Noortepakett</a></li>
+                <li style="background-color: #EF104D;"><a href="#" class="button" >Pensionisammas</a></li>
+                <li style="background-color: #536AFF;"><a href="#" class="button" >Investeerimiskonto</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
