About almost done Footer valmis

--- a/vaheleht1.html
+++ b/vaheleht1.html
@@ -9,17 +9,34 @@
     <link rel="stylesheet" href="CSS/mainsite.css">
 </head>
 <body>
-    <div class="lehtpooleks" id="esimenepool">
-        <img src="images/bank director.jpg" alt="Founder Krabs" style="width:500px;height:300px;">
-        <p>
-            Krabs age 77 See on meie pangadirektor, kes on tunnustatud eri maailma paigus mitemete auhindadega. Forbes nimetas auväärt Mr. Krabsi 2019. aasta kõige efektiivsemaks tööliseks ja rikkaimaks inimeseks maailmas. Tema koguväärtus ulatub suuremaks kui kogu kuld maakeral, see on umber 529 triljon miljonit Ameerika dollarit. Mr Krabs saavutas kogu oma varanduse tänu oma panga ??? tegevusele ja selle ülesehitamisele. Tema ustavad tööandjad viivad tema legacyt edasi, kui Krabs kavatseb pensionile minna.
-        </p>
+    <div class="lehtpooleks">
+        <img src="#krab photo" alt="Founder Krabs">
+        <div id="textbox">
+            <p>
+                Darthbanki asutaja Hr Krabs
+            </p>
+            <p>
+                Tunnustatud eri maailma paigus mitmete auhindadega. Tema auhinnakogus on Valgetähe 4. klassi teenetemärk. Kuninganna Elizabeth lõi ta rüütliks. Forbes nimetas auväärt Mr. Krabsi 2019. aasta kõige ettevõtlikumaks inimeseks ja rikkaimaks maailmas. Darthbanki varudes on rohkem kulda kui maakeral kokku, seda ligi 529 miljon triljoni Ameerika dollari väärtuses. Iga viimne kui panga tööline on isiklikult Krabsi poolt valitud.
+            </p>
+        </div>
     </div>
-    <div class="lehtpooleks" id="teinepool">
-        <p>
-            tekst vader age 45
-        </p>
-            <img src="images/bank director.jpg" alt="Co-counder Darth">
+    <div class="lehtpooleks">
+        <div id="textbox">
+            <p>
+                Darthbanki peadirektor Vader
+            </p>
+            <p>
+                Legend räägib et Vaderi omakapitalil puudub reaalarvuline väärtus.
+            </p>
+        </div>
+            <img src="images/CEO_darth.jpg" alt="CEO Darth">
     </div>
 </body>
+<footer>
+    <div id="footer">
+        <p>
+            Kontakttelefon: +372 634 0212   email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+        </p>
+    </div>
+</footer>
 </html>
