mainpage css update 3

--- a/mainsite.html
+++ b/mainsite.html
@@ -20,9 +20,11 @@
     </nav>
     <div class="big">
         <div class="image">
-            <img src="coins.jpg" alt="pilt">
+                <iframe src="https://www.youtube.com/embed/uT-oQSyZZvA"></iframe>
+                
         </div>
         <div class="container">
+            <p>Vali pakett:</p>
             <ul>
                 <li style="background-color: #EF7110;"><a href="#" class="button" >Äripakett</a></li>
                 <li style="background-color: #25EB45;"><a href="#" class="button" >Noortepakett</a></li>
