logo lisatud navbari

--- a/mainsite.html
+++ b/mainsite.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="navbar">
-            <h2>Logo</h2>
+            <img src="Images\DarthBank_logo.svg" alt="logo">
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#finances">Finances</a></li>
