--- a/mainsite.html
+++ b/mainsite.html
@@ -10,14 +10,14 @@
 <body>
     <nav>
         <div class="navbar">
-            <img src="Images\DarthBank_logo.svg" alt="logo">
+            <a href="mainsite.html"><img src="Images\DarthBank_logo.svg" alt="logo"></a>
             <ul>
                 <li><a href="mainsite.html">Avaleht</a></li>
                 <li><a href="vaheleht2.html">Minu konto</a></li>
                 <li><a href="#job offerings">Tööpakkumised</a></li>
                 <li><a href="vaheleht1.html">Rohkem infot</a></li>
             </ul>
-            <img src="Images\menu_icon.svg"  class="burgermenu" alt="burgericon" onclick="ava_menuu()">
+            <img src="Images\menu_icon.svg"  class="burgermenu" alt="burgericon" onclick="ava_menuu()"> 
             
         </div>
         <div id="menu-box">
