--- a/vaheleht1.html
+++ b/vaheleht1.html
@@ -32,7 +32,7 @@
     <div class="lehtpooleks">
         <img src="images/13.jpg" alt="Founder Krabs">
         <div id="textbox">
-            <p>
+            <p id="nimi">
                 Darthbanki asutaja Hr Krabs
             </p>
             <p>
@@ -42,7 +42,7 @@
     </div>
     <div class="lehtpooleks">
         <div id="textbox">
-            <p>
+            <p id="nimi">
                 Darthbanki peadirektor Vader
             </p>
             <p>
