--- a/mainsite.html
+++ b/mainsite.html
@@ -14,7 +14,6 @@
             <ul>
                 <li><a href="mainsite.html">Avaleht</a></li>
                 <li><a href="vaheleht2.html">Minu konto</a></li>
-                <li><a href="#job offerings">Tööpakkumised</a></li>
                 <li><a href="vaheleht1.html">Rohkem infot</a></li>
             </ul>
             <img src="Images\menu_icon.svg"  class="burgermenu" alt="burgericon" onclick="ava_menuu()"> 
@@ -24,7 +23,6 @@
                 <ul>
                         <li><a href="mainsite.html">Avaleht</a></li>
                         <li><a href="vaheleht2.html">Minu konto</a></li>
-                        <li><a href="#job offerings">Tööpakkumised</a></li>
                         <li><a href="vaheleht1.html">Rohkem infot</a></li>
                 </ul>
         </div>
@@ -104,6 +102,13 @@
     
         
 </body>
+<footer>
+    <div id="footer">
+        <p>
+            Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+        </p>
+    </div>
+</footer>
 <script>
     var istrue = false;
     function ava_menuu(){
