--- a/vaheleht2.html
+++ b/vaheleht2.html
@@ -19,3 +19,25 @@
             </ul>
         </nav>
 </body>
+<body>
+    <user>
+        <div class="big1">
+            <h1> MINU KONTO </h1>
+            <div class="big2">
+                <div class="box" id="photo"><img src="Images\Blank.jpg">
+                    <div>
+                            <button type="button" style="border-color: whitesmoke;">Muuda pilti</button>
+                    </div>
+                </div>
+                <div class="box" id="andmed">
+                    <h2 style="border-bottom: 2px darkgray;">ÜLDINFO</h2>
+                    <h3>Nimi: Loremus Ipsumus Maximus  <br>
+                        Sünnikuupäev: 29. Veebruar 1925 <br>
+                        Aadress: Osmussaare, Eesti, 91217 <br>
+                        Tel. Nr: +372 5454 1010  <br>
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </user>
+</body>
