--- a/vaheleht1.html
+++ b/vaheleht1.html
@@ -9,10 +9,28 @@
     <link rel="stylesheet" href="CSS/mainsite.css">
 </head>
 <body>
+    <nav>
+        <div class="navbar">
+            <a href="mainsite.html"><img src="Images\DarthBank_logo.svg" alt="logo"></a>
+            <ul>
+                <li><a href="mainsite.html">Avaleht</a></li>
+                <li><a href="vaheleht2.html">Minu konto</a></li>
+                <li><a href="vaheleht1.html">Rohkem infot</a></li>
+            </ul>
+            <img src="Images\menu_icon.svg"  class="burgermenu" alt="burgericon" onclick="ava_menuu()">  
+        </div>
+        <div id="menu-box">
+            <ul>
+                <li><a href="mainsite.html">Avaleht</a></li>
+                <li><a href="vaheleht2.html">Minu konto</a></li>
+                <li><a href="vaheleht1.html">Rohkem infot</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="lehtpooleks">
-        <img src="#krab photo" alt="Founder Krabs">
+        <img src="images/13.jpg" alt="Founder Krabs">
         <div id="textbox">
-            <p>
+            <p id="nimi">
                 Darthbanki asutaja Hr Krabs
             </p>
             <p>
@@ -22,11 +40,11 @@
     </div>
     <div class="lehtpooleks">
         <div id="textbox">
-            <p>
+            <p id="nimi">
                 Darthbanki peadirektor Vader
             </p>
             <p>
-                Legend räägib et Vaderi omakapitalil puudub reaalarvuline väärtus.
+                Legend räägib et Vaderi omakapitalil puudub reaalarvuline väärtus. Ta hakkas huvituma panga tegevusest juba 10 aastaselt, kui tema vend Krabs oli alles oma hiilgustee alguses. Üheskoos oma vennaga saavutasid nad Darthbanki kuulsuse, usaldatavuse ja kindluse.
             </p>
         </div>
             <img src="images/CEO_darth.jpg" alt="CEO Darth">
@@ -35,8 +53,23 @@
 <footer>
     <div id="footer">
         <p>
-            Kontakttelefon: +372 634 0212   email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+            Kontakttelefon: +372 634 0212 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; email: xXfreemoneyXx.krabs@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
         </p>
     </div>
 </footer>
+<script>
+        var istrue = false;
+        function ava_menuu(){
+            if (istrue == false){
+                var x = document.getElementById("menu-box").style.display="block";
+                istrue = true;
+            }
+            else{
+                var x = document.getElementById("menu-box").style.display="none";
+                istrue = false;
+            }
+            
+            return x;
+            }
+</script>
 </html>
