Lõpetatud "Minu konto" vaheleht

--- a/vaheleht2.html
+++ b/vaheleht2.html
@@ -14,7 +14,6 @@
             <ul>
                 <li><a href="mainsite.html">Avaleht</a></li>
                 <li><a href="vaheleht2.html">Minu konto</a></li>
-                <li><a href="#job offerings">Tööpakkumised</a></li>
                 <li><a href="vaheleht1.html">Rohkem infot</a></li>
             </ul>
         </nav>
@@ -31,13 +30,20 @@
                 </div>
                 <div class="box" id="andmed">
                     <h2 style="border-bottom: 2px darkgray;">ÜLDINFO</h2>
-                    <h3>Nimi: Loremus Ipsumus Maximus  <br>
-                        Sünnikuupäev: 29. Veebruar 1925 <br>
-                        Aadress: Osmussaare, Eesti, 91217 <br>
-                        Tel. Nr: +372 5454 1010  <br>
+                    <h3>Nimi: <p>Loremus Ipsumus Maximus</p>
+                        Sünnikuupäev: <p>29. Veebruar 1925</p>
+                        Aadress: <p>Osmussaare, Eesti, 91217</p>
+                        Tel. Nr: <p>+372 5454 1010</p>
                     </h3>
                 </div>
             </div>
         </div>
     </user>
 </body>
+<footer>
+    <div id="footer">
+        <p>
+           Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+        </p>
+    </div>
+</footer>
