--- a/vaheleht1.html
+++ b/vaheleht1.html
@@ -11,13 +11,13 @@
 <body>
     <nav>
         <div class="navbar">
-            <a href="mainsite.html"><img src="Images\DarthBank_logo.svg" alt="logo"></a>
+            <a href="mainsite.html"><img src="Images/DarthBank_logo.svg" alt="logo"></a>
             <ul>
                 <li><a href="mainsite.html">Avaleht</a></li>
                 <li><a href="vaheleht2.html">Minu konto</a></li>
                 <li><a href="vaheleht1.html">Rohkem infot</a></li>
             </ul>
-            <img src="Images\menu_icon.svg"  class="burgermenu" alt="burgericon" onclick="ava_menuu()">  
+            <img src="Images/menu_icon.svg"  class="burgermenu" alt="burgericon" onclick="ava_menuu()">  
         </div>
         <div id="menu-box">
             <ul>
@@ -29,8 +29,8 @@
     </nav>
     <div class="lehtpooleks">
         <img src="images/13.jpg" alt="Founder Krabs">
-        <div id="textbox">
-            <p id="nimi">
+        <div class="textbox">
+            <p class="nimi">
                 Darthbanki asutaja Hr Krabs
             </p>
             <p>
@@ -39,8 +39,8 @@
         </div>
     </div>
     <div class="lehtpooleks">
-        <div id="textbox">
-            <p id="nimi">
+        <div class="textbox">
+            <p class="nimi">
                 Darthbanki peadirektor Vader
             </p>
             <p>
