--- a/vaheleht2.html
+++ b/vaheleht2.html
@@ -5,45 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Minu konto</title>
-    <link rel="stylesheet" href="CSS\vaheleht2.css">
+    <link rel="stylesheet" href="CSS/vaheleht2.css">
 </head>
 <body>
     <nav>
         <div class="navbar">
-            <a href="mainsite.html"><img src="Images\DarthBank_logo.svg" alt="logo"></a>
+            <a href="mainsite.html"><img src="Images/DarthBank_logo.svg" alt="logo"></a>
             <ul>
                 <li><a href="mainsite.html">Avaleht</a></li>
                 <li><a href="vaheleht2.html">Minu konto</a></li>
                 <li><a href="vaheleht1.html">Rohkem infot</a></li>
             </ul>
-        </nav>
+        </div>
+    </nav>
 </body>
 <body>
-    <user>
-        <div class="big1">
-            <h1> MINU KONTO </h1>
-            <div class="big2">
-                <div class="box" id="photo"><img src="Images\Blank.jpg">
-                    <div>
-                            <button type="button" style="border-color: whitesmoke;">Muuda pilti</button>
-                    </div>
-                </div>
-                <div class="box" id="andmed">
-                    <h2 style="border-bottom: 2px darkgray;">ÜLDINFO</h2>
-                    <h3>Nimi: <p>Loremus Ipsumus Maximus</p>
-                        Sünnikuupäev: <p>29. Veebruar 1925</p>
-                        Aadress: <p>Osmussaare, Eesti, 91217</p>
-                        Tel. Nr: <p>+372 5454 1010</p>
-                    </h3>
+    <div class="big1">
+        <h1> MINU KONTO </h1>
+        <div class="big2">
+            <div class="box" id="photo"><img src="Images/Blank.jpg" alt="Kasutaja pilt">
+                <div>
+                    <button type="button" style="border-color: whitesmoke;">Muuda pilti</button>
                 </div>
             </div>
+            <div class="box" id="andmed">
+                <h2 style="border-bottom: 2px darkgray;">ÜLDINFO</h2>
+                <h3>Nimi: <span> Loremus Ipsumus Maximus</span><br>
+                    Sünnikuupäev: <span>29. Veebruar 1925</span><br>
+                    Aadress: <span>Osmussaare, Eesti, 91217</span><br>
+                    Tel. Nr: <span>+372 5454 1010</span><br>
+                </h3>
+            </div>
         </div>
-    </user>
-</body>
-<footer>
-    <div id="footer">
-        <p>
-           Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
-        </p>
     </div>
-</footer>
+</body>
+<body>
+    <footer>
+        <div id="footer">
+            <p>
+                Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+            </p>
+        </div>
+    </footer>
+</body>
+</html>
