--- a/vaheleht2.html
+++ b/vaheleht2.html
@@ -18,14 +18,12 @@
             </ul>
         </div>
     </nav>
-</body>
-<body>
     <div class="big1">
         <h1> MINU KONTO </h1>
         <div class="big2">
             <div class="box" id="photo"><img src="Images/Blank.jpg" alt="Kasutaja pilt">
                 <div>
-                    <button type="button" style="border-color: whitesmoke;">Muuda pilti</button>
+                    <button type="button" style="font-size: 150%; border-color: whitesmoke;">Muuda pilti</button>
                 </div>
             </div>
             <div class="box" id="andmed">
@@ -38,12 +36,10 @@
             </div>
         </div>
     </div>
-</body>
-<body>
     <footer>
         <div id="footer">
             <p>
-                Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+            Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
             </p>
         </div>
     </footer>
