--- a/mainsite.html
+++ b/mainsite.html
@@ -99,7 +99,7 @@
         <footer>
                 <div id="footer">
                     <p>
-                        Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+                        Kontakttelefon: +372 634 0212 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; email: xXfreemoneyXx.krabs@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
                     </p>
                 </div>
             </footer>
