--- a/vaheleht2.html
+++ b/vaheleht2.html
@@ -18,8 +18,6 @@
             </ul>
         </div>
     </nav>
-</body>
-<body>
     <div class="big1">
         <h1> MINU KONTO </h1>
         <div class="big2">
@@ -38,12 +36,10 @@
             </div>
         </div>
     </div>
-</body>
-<body>
     <footer>
         <div id="footer">
             <p>
-                Kontakttelefon: +372 634 0212  email: xXfreemoneyXx.krabs@gmail.com    aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
+                Kontakttelefon: +372 634 0212 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; email: xXfreemoneyXx.krabs@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Aadress: Kärberi 9, Lasnamäe linnaosa, 13918 Tallinn
             </p>
         </div>
     </footer>
