--- a/vaheleht2.html
+++ b/vaheleht2.html
@@ -28,10 +28,10 @@
             </div>
             <div class="box" id="andmed">
                 <h2 style="border-bottom: 2px darkgray;">ÜLDINFO</h2>
-                <h3>Nimi: <span> Loremus Ipsumus Maximus</span><br>
-                    Sünnikuupäev: <span>29. Veebruar 1925</span><br>
-                    Aadress: <span>Osmussaare, Eesti, 91217</span><br>
-                    Tel. Nr: <span>+372 5454 1010</span><br>
+                <h3>Nimi:<br> <span> Loremus Ipsumus Maximus</span><br><br>
+                    Sünnikuupäev:<br> <span>29. Veebruar 1925</span><br><br>
+                    Aadress:<br> <span>Osmussaare, Eesti, 91217</span><br><br>
+                    Tel. Nr:<br> <span>+372 5454 1010</span>
                 </h3>
             </div>
         </div>
