--- a/vaheleht1.html
+++ b/vaheleht1.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
     <div class="lehtpooleks">
-        <img src="images/13.jpg" alt="Founder Krabs">
+        <img src="Images/13.jpg" alt="Founder Krabs">
         <div class="textbox">
             <p class="nimi">
                 Darthbanki asutaja Hr Krabs
@@ -47,7 +47,7 @@
                 Legend räägib et Vaderi omakapitalil puudub reaalarvuline väärtus. Ta hakkas huvituma panga tegevusest juba 10 aastaselt, kui tema vend Krabs oli alles oma hiilgustee alguses. Üheskoos oma vennaga saavutasid nad Darthbanki kuulsuse, usaldatavuse ja kindluse.
             </p>
         </div>
-            <img src="images/CEO_darth.jpg" alt="CEO Darth">
+            <img src="Images/CEO_darth.jpg" alt="CEO Darth">
     </div>
     <footer>
         <div id="footer">
